# Snapdrop

./: LICENSE  README.md  index.html  package.json  vite.config.js
.github/workflows/: windows-build.yml
src/: App.jsx  areaCapture.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: capture.rs  clipboard.rs  files.rs  history.rs  hotkeys.rs  main.rs  settings.rs  tray.rs
src/history/: historyService.js
