[package]
name = "snapdrop"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
dirs = "6"
screenshots = "0.8"
arboard = "3"
open = "5"
tauri-plugin-global-shortcut = "2"

[build-dependencies]
tauri-build = { version = "2" }
